# aur-check-updates

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_release.yml  config.toml  release.yml
src/: alpm.rs  app.rs  aur.rs  check.rs  cli.rs  consts.rs  error.rs  help.in  io.rs  local.rs  main.rs  package.rs  pacman_conf.rs  print.rs  request.rs  utils.rs
src/app/: check.rs  cli.rs  help.in  local.rs
src/app/check/: aur.rs  tests.rs
src/app/cli/: tests.rs
src/app/local/: pacman_conf.rs
src/app/local/pacman_conf/: test_config.in  test_config_no_dbpath.in  tests.rs
src/cli/: error.rs  tests.rs
src/package/: tests.rs
