[package]
name = "aur-check-updates"
version = "1.1.3"
edition = "2024"
rust-version = "1.85"
description = "A very basic CLI app for checking updates from Arch User Repository (AUR)"
repository = "https://github.com/HanabishiRecca/aur-check-updates"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
alpm = "4.0"
curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
